src/snapshots/hemlis__parser__tests__expr_tick.snap
---
source: src/parser.rs
expression: "p_expr(\"a `b` c\")"
---
12 of 12
===
Module
 Header
  MName
   (0, 7)->(0, 11)
  NULL
  Decl::Def
   Name
    (2, 0)->(2, 1)
   GuardedExpr::Unconditional
    Expr::Infix
     Expr::Ident
      QName
       NULL
       Name
        (2, 4)->(2, 5)
     Expr::Ident
      QName
       NULL
       Name
        (2, 7)->(2, 8)
     Expr::Ident
      QName
       NULL
       Name
        (2, 10)->(2, 11)
===
