src/snapshots/hemlis__parser__tests__simple_import.snap
---
source: src/parser.rs
expression: "p_import(\"import A as A\")"
---
9 of 9
===
Module
 Header
  MName
   (0, 7)->(0, 13)
  NULL
   ImportDecl
    MName
     (2, 7)->(2, 8)
    MName
     (2, 12)->(2, 13)
===
