src/snapshots/hemlis__parser__tests__typ_a_signature.snap
---
source: src/parser.rs
expression: "p_typ(\"forall a. Monoid a => a -> a -> a\")"
---
18 of 18
===
Module
 Header
  MName
   (0, 7)->(0, 10)
  NULL
  Decl::Sig
   Name
    (2, 0)->(2, 1)
   Typ::Forall
     TypVarBinding
      Name
       (2, 12)->(2, 13)
      NULL
    Typ::Constrained
     Constraint
      QProperName
       NULL
       ProperName
        (2, 15)->(2, 21)
       Typ::Var
        Name
         (2, 22)->(2, 23)
     Typ::Arr
      Typ::Var
       Name
        (2, 27)->(2, 28)
      Typ::Arr
       Typ::Var
        Name
         (2, 32)->(2, 33)
       Typ::Var
        Name
         (2, 37)->(2, 38)
===
